#
# Project Sources
#
set(PROJECT_HEADERS_DIR "${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}")
file(GLOB_RECURSE PROJECT_HEADERS ${PROJECT_HEADERS_DIR}/*.h ${PROJECT_HEADERS_DIR}/*.hpp)
file(GLOB_RECURSE PROJECT_SRCS *.cpp *.h *.hpp)

add_executable(${PROJECT_NAME} ${PROJECT_HEADERS} ${PROJECT_SRCS} )

#
# Set compiler flags
#

target_link_libraries(${PROJECT_NAME})

#
# Add Install Targets
#

install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib)

if(EXISTS "${PROJECT_HEADERS_DIR}" AND IS_DIRECTORY "${PROJECT_HEADERS_DIR}")
	install(DIRECTORY ${PROJECT_HEADERS_DIR} DESTINATION "include")
endif(EXISTS "${PROJECT_HEADERS_DIR}" AND IS_DIRECTORY "${PROJECT_HEADERS_DIR}")
